src/snapshots/bevy_state_plugin_generator__parser__tests__parse_config.snap
---
source: src/parser.rs
expression: "parse_config(\"Name, Name2\").unwrap()"
---
(
    "",
    [
        Singleton(
            Identifier(
                "Name",
            ),
        ),
        Singleton(
            Identifier(
                "Name2",
            ),
        ),
    ],
)
