src/snapshots/bevy_state_plugin_generator__parser__tests__parse_node@Name_[_A_{_B,_C_[D_E_{F_G}]_H_}_I_J_].snap
---
source: src/parser.rs
expression: parse_node(input)
---
Ok(
    (
        " [ A { B, C [D E {F G}] H } I J ]",
        Singleton(
            Identifier(
                "Name",
            ),
        ),
    ),
)
