src/snapshots/bevy_state_plugin_generator__parser__tests__parse_node@Name_{A}.snap
---
source: src/parser.rs
expression: parse_node(input)
---
Ok(("", Enum(Identifier("Name"), [Singleton(Identifier("A"))])))
