src/snapshots/bevy_state_plugin_generator__parser__tests__parse_node_nested.snap
---
source: src/parser.rs
expression: parse_node(input)
---
Ok(
    (
        "",
        Enum(
            Identifier(
                "Name",
            ),
            [
                Enum(
                    Identifier(
                        "A",
                    ),
                    [
                        Singleton(
                            Identifier(
                                "B",
                            ),
                        ),
                        Enum(
                            Identifier(
                                "C",
                            ),
                            [
                                Singleton(
                                    Identifier(
                                        "D",
                                    ),
                                ),
                                Enum(
                                    Identifier(
                                        "E",
                                    ),
                                    [
                                        Singleton(
                                            Identifier(
                                                "F",
                                            ),
                                        ),
                                        Singleton(
                                            Identifier(
                                                "G",
                                            ),
                                        ),
                                    ],
                                ),
                            ],
                        ),
                        Singleton(
                            Identifier(
                                "H",
                            ),
                        ),
                    ],
                ),
                Singleton(
                    Identifier(
                        "I",
                    ),
                ),
                Singleton(
                    Identifier(
                        "J",
                    ),
                ),
            ],
        ),
    ),
)
